--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,12 @@
         "noImplicitReturns": true,
         "noImplicitUseStrict": false,
         "noFallthroughCasesInSwitch": true,
+        "skipLibCheck": true,
         "typeRoots": [
             "./node_modules/@types",
             "./node_modules"
         ],
-        "types": [
-        ]
+        "types": []
     },
     "exclude": [
         "demo",
