--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,7 @@
     }
   },
   "dependencies": {
-    "nativescript-paytm": "file:///Y:\\github\\nativescript-paytm",
+    "nativescript-paytm": "file:///G:\\Payments\\nativescript-paytm",
     "nativescript-theme-core": "^1.0.2",
     "nativescript-unit-test-runner": "^0.3.4",
     "tns-core-modules": "^2.5.1"
